# cv

./: .gitignore  Makefile  cv-llt.tex  education.tex  employment.tex  misc.tex  own-bib.bib  projects.tex  pyproject.toml  skills.tex  summary.tex
.claude/agents/: README.md  construction-lead.md  feature-architect.md  knowledge-steward.md
.claude/skills/: README.md
.claude/skills/add-paper/: SKILL.md
.claude/skills/constellize:feature:implement/: SKILL.md
.claude/skills/constellize:feature:specify/: SKILL.md
.claude/skills/constellize:feature:verify/: SKILL.md
.claude/skills/constellize:memory:establish/: SKILL.md
.claude/skills/constellize:memory:recover/: SKILL.md
.claude/skills/constellize:memory:revise/: SKILL.md
.claude/skills/constellize:memory:update/: SKILL.md
.github/workflows/: build-cv.yml
data/content/: education.yaml  employment.yaml  meta.yaml  misc.yaml  projects.yaml  referees.yaml  skills.yaml  summaries.yaml
data/variants/: academic.yaml  research-professional.yaml  sde-long.yaml
llm/features/: add-new-paper.md  cv-website.md  research-professional-variant.md  variant-selector-dsl.md
llm/memory_bank/: activeContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
templates/tex/: education.tex.j2  employment.tex.j2  misc.tex.j2  projects.tex.j2  referee.tex.j2  skills.tex.j2  summary.tex.j2
themes/: refined-serif.sty
tools/: converters.py  lint_bib.py  render.py  resolver.py  schema.py
tools/tests/: test_converters.py  test_lint_bib.py  test_render.py  test_resolver.py  test_schema.py
(+8 files in other folders)
