[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cv-tools"
version = "0.1.0"
description = "Data-driven CV generator: YAML + Jinja2 -> LaTeX fragments."
requires-python = ">=3.9"
dependencies = [
    "pyyaml>=6.0.1",
    "jinja2>=3.1.3",
    "pydantic>=2.5",
    "bibtexparser>=1.4.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[tool.setuptools]
packages = ["tools"]

[tool.pytest.ini_options]
testpaths = ["tools/tests"]
addopts = "-v --cov=tools --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
# UP045 prefers `X | None` over `Optional[X]`, but Pydantic v2 on py39 cannot
# eval the `|` syntax at runtime even with `from __future__ import annotations`.
# Bump the target-version to py310 and drop this ignore once py39 is no longer
# supported.
ignore = ["UP045", "UP007"]
